--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale =1" />
+    <meta charset="UTF-8">
     <title>Dictionary</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
